# students

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.json  README.md  docker-compose.yml  electron-builder.config.cjs  electron.vite.config.ts  package.json  tsconfig.json
.github/: README.md
backend/: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py
frontend/: .eslintrc.json  Dockerfile  README.md  next.config.js  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/pages/: index.js
frontend/styles/: globals.css
infra/: README.md
infra/postgres/: init.sql
infra/scripts/: bootstrap.sh  init_db.sh  wait-for-postgres.sh
students/zichan2/back/: pom.xml
students/zichan2/back/src/main/java/com/company/asset/: AssetApplication.java
students/zichan2/back/src/main/java/com/company/asset/auth/: AccessGuard.java  AuthContextHolder.java  AuthController.java  AuthFilter.java  AuthService.java  AuthenticatedUser.java  CreateUserRequest.java  InMemoryTokenStore.java  LoginRequest.java  LoginResponse.java  Role.java  RoleCode.java  RoleRepository.java  UpdateUserRequest.java  UserAccount.java  UserController.java  UserDto.java  UserRepository.java  UserService.java
students/zichan2/back/src/main/java/com/company/asset/config/: CorsConfig.java
students/zichan2/back/src/main/resources/: application.yml  data.sql  schema.sql
